# u-ask-qa-automation

./: .env  .gitignore  README.md  conftest.py  pyproject.toml
.deepeval/: .deepeval_telemetry.txt
.github/: main.yml
data/: test-data.json
src/u_ask_qa/: __init__.py
src/u_ask_qa/core/: __init__.py  browser.py  config.py  reporter.py
src/u_ask_qa/evaluators/: __init__.py  config.py  llm_evaluator.py
src/u_ask_qa/pages/: __init__.py  chatbot_page.py
src/u_ask_qa/utils/: __init__.py  local_storage.py  test_data_loader.py
src/u_ask_qa/validators/: __init__.py  response_validator.py  security_checker.py
tests/: conftest.py  test_llm_evaluation.py  test_locale_prompts.py  test_login.py  test_response_validation.py  test_security.py  test_ui_behavior.py
