[project]
name = "u-ask-qa-automation"
version = "1.0.0"
description = "QA Automation Framework for GovGPT Chatbot"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "playwright>=1.40.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-Levenshtein>=0.25.0",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
reporting = [
    "pytest-html>=4.1.0",
    "rich>=13.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/u_ask_qa"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
markers = [
    "ui: UI behavior tests",
    "response: GPT response validation tests",
    "security: Security and injection tests",
    "smoke: Quick smoke tests",
    "arabic: Arabic language tests",
    "english: English language tests",
    "mobile: Mobile viewport tests",
    "desktop: Desktop viewport tests",
    "login: Login tests",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
